--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,12 @@
 import Branding from '../components/Home/Branding';
 import CarPage from '../components/Car/CarPage';
 import DefaultLayout from '../layouts/DefaultLayout.astro';
-import { fetchDistinctFilters } from '@/lib/vehicles';
 
+const apiUrl = import.meta.env.API_URL;
 // 🚀 Fetch data server-side
-const vehicleResponse = await fetch('http://localhost:4322/api/vehicles'); // Adjust API URL as needed
+const vehicleResponse = await fetch(apiUrl + 'vehicles'); // Adjust API URL as needed
 const { vehicles, count } = await vehicleResponse.json();
-const filterResponse = await fetch('http://localhost:4322/api/fetchVehicleFilters');  // Fetch filters
+const filterResponse = await fetch(apiUrl + 'fetchVehicleFilters');  // Fetch filters
 const {initialFilters} = await filterResponse.json(); // Fetch filters
 
 const BATCH_SIZE = 24;
