--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,7 @@ import Branding from '../components/Home/Branding';
 import CarPage from '../components/Car/CarPage';
 import DefaultLayout from '../layouts/DefaultLayout.astro';
 
-const apiUrl = process.env.VERCEL_URL
-	? `https://${process.env.VERCEL_URL}/api/vehicles`
-	: import.meta.env.API_URL; // Fallback to local if not deployed
+const apiUrl = 'https://yogacars.vercel.app/'; // Fallback to local if not deployed
 // 🚀 Fetch data server-side
 const vehicleResponse = await fetch(apiUrl + 'vehicles'); // Adjust API URL as needed
 const { vehicles, count } = await vehicleResponse.json();
