--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ try {
 
 <DefaultLayout>
 	<div>
-		<Branding logosClassName="fill-black" client:load />
+		<!--<Branding logosClassName="fill-black" />-->
 		{errorMessage ? (
 			<div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative m-4">
 				<strong class="font-bold">Error:</strong>
