--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -1,5 +1,5 @@
 ---
-import '/public/css/global.css';
+import '../styles/global.css';
 import Navbar from '../components/Navbar/Navbar'; // Adjust the path if necessary
 
 
