--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,11 +47,15 @@ const diffImage = await getImage({
 	src: carDiff,
 	format: "webp",
 	quality: 50,
+	width:1910,
+	height:1080
 });
 const provideSecImageopt = await getImage({
 	src: provideSecImage,
 	format: "webp",
 	quality: 50,
+	width:1910,
+	height:1080
 });
 
 
